assets/css/style.css
/* Google fonts import*/
@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

/* CSS Variables */
:root {
    --primary-font: "Prompt", sans-serif;
    --secondary-font: "Noto Serif Display", serif;
    --primary-color: #3a4a21; /* dark green */
    --secondary-color: #c4c097; /* light green */
    --highlight-color: #16316f; /* blue */
    --highlight-color-light: #7a9fc2; /* light blue */
}

/* Global styles */

body {
    font-family: var(--primary-font);
    padding-top: 56px; /* pushes the top of the header down under fixed navbar */
}

h1,
h2,
h3 {
    font-family: var(--secondary-font);
    color: var(--primary-color);
}
h1,
h2 {
    text-transform: uppercase;
}

h2 {
    margin-bottom: 2rem;
}

.sub-heading-color {
    color: var(--highlight-color);
}

.section {
    /* padding-top: 4rem; prevent navbar overlap */
    margin-top: 2rem;
    margin-bottom: 2rem;
}

/* Buttons */
.custom-button-filled {
    border: 2px solid var(--highlight-color);
    background-color: var(--highlight-color);
    color: white;
}

.custom-button-filled:hover {
    border: 2px solid var(--secondary-color);
    background-color: var(--secondary-color);
    color: white;
}

.custom-button-outline {
    border: 3px solid var(--highlight-color);
    padding: 7px 25px;
    color: var(--highlight-color);
}

.custom-button-outline:hover {
    background-color: var(--highlight-color);
    color: white;
}

/* Navbar */
#navbar {
    /* You need to remove the bg-body-tertiary from the navbar you obtained from Bootstrap as that has !important
    that overrides the background-color */
    background-color: var(--primary-color);
}

#navbar .logo {
    width: 24px;
}

/* Header */
#header .lead {
    font-family: var(--secondary-font);
}

/* Services */
#services .card-footer {
    font-weight: bold;
    color: var(--highlight-color);
    background-color: transparent;
}

#services .card {
    margin-bottom: 1.5rem;
}

/* Events */

#events .table {
    /* events table font size small enough that 
      the table doesn't overflow on xs screens. 
      Size set back to 1rem in a media query 
      for sm screens and up */
    font-size: 0.7rem;
}

.student-discount {
    background-color: var(--highlight-color);
    font-weight: bold;
    color: white;
    display: block;
    max-width: 300px;
    margin: auto;
    padding: 5px 10px;
    font-size: 0.8rem;
}
/* Coaching cards */

#coaching .card {
    border: none;
}

/* Footer / contact */

#contact {
    background-color: var(--primary-color);
    color: white;
    padding-bottom: 3rem;
}

#contact h2 {
    color: white;
}

#contact .sub-heading-color {
    color: var(--highlight-color-light);
}

#contact i {
    color: var(--secondary-color);
    font-size: 1.2rem;
    margin-right: 15px;
}

#contact .social-links i {
    color: var(--highlight-color-light);
    font-size: 1.9rem;
    -webkit-transition: color 0.3s ease-in-out;
    -o-transition: color 0.3s ease-in-out;
    transition: color 0.3s ease-in-out;
}

#contact .social-links i:hover {
    color: var(--secondary-color);
}

#contact .table-dark * {
    background-color: transparent;
}

/* grid visualization CSS for testing */
/* .container,
.row {
    border: 2px solid black;
}

.col-12 {
    border: 2px solid white;
    background-color: lightgray;
} */

/* Media queries */

/* Small screens and up */
@media screen and (min-width: 576px) {
    /* increase font size in events table when screen size is large enough */
    #events .table {
        font-size: 1rem;
    }
    .student-discount {
        font-size: 1rem;
    }
}

/* Medium devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {
    /* Make all service cards the same height for consistency */
    #services .card-body {
        min-height: 166.48px;
    }
}

/* Large devices (small laptops, 992px and up) */
@media screen and (min-width: 992px) {
    /* Make all service cards the same height for consistency */
    #services .card-body {
        min-height: auto;
    }
}

/* xl devices (large desktops, 1200px and up) */
@media screen and (min-width: 1200px) {
    /* make all service cards the same height for consistency */
    #services .card-body {
        min-height: 220px;
    }
}

/* xxl devices (larger desktops, 1400px and up) */
@media screen and (min-width: 1400px) {
    /* make all service cards the same height for consistency */
    #services .card-body {
        min-height: 195px;
    }
}

